test/Fail/Issue1967.err
Issue1967.agda:4.13-16: warning: -W[no]InstanceNoOutputTypeName
Instance arguments whose type is not {Γ} → C, where C evaluates to
a postulated type, a parameter type or the name of a data or record
type, are never considered by instance search, so having an
instance argument ⦃ A : Set ⦄ has no effect.
when checking that the expression ⦃ A : Set ⦄ → Set is a type

Issue1967.agda:5.22-23: error: [CannotApply]
Expression used as function but does not have function type:
  expr: D
  type: Set
when checking that A is a valid argument to a function of type
⦃ A = A₁ : Set ⦄ → Set
